fix slider and edit scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,26 @@ h1, h2, h3, h4, h5, h6 {
   height: 300px;
 }
 
+/* Scrollbar styles */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 12px;
+  }
+  
+  ::-webkit-scrollbar-track {
+  background: #f5f5f5;
+  border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #ccc;  
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+  background: #999;  
+  }
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -709,6 +729,18 @@ section .container {
 }
 .portfolio-details .swiper-pagination .swiper-pagination-bullet-active {
   background-color: #4233ff;
+}
+.portifolio-img{
+  width: 60vw;
+  height: 60vh;
+}
+
+@media (max-width: 430px){
+  .portifolio-img{
+    width: 90vw;
+    height: 45vh;
+  }
+  
 }
 
 /*--------------------------------------------------------------
